--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
         <version.plugin.exec-maven-plugin>1.3.2</version.plugin.exec-maven-plugin>
         <version.plugin.maven-jar-plugin>2.6</version.plugin.maven-jar-plugin>
         <version.plugin.appassembler-maven-plugin>1.9</version.plugin.appassembler-maven-plugin>
+        <version.plugin.maven-assembly-plugin>2.5.3</version.plugin.maven-assembly-plugin>
 
         <!-- Source encoding -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -369,7 +370,38 @@
                         </configuration>
                     </plugin>
                 </plugins>
+            </build>
+        </profile>
 
+        <profile>
+            <id>fatjar</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>${version.plugin.maven-assembly-plugin}</version>
+                        <configuration>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <archive>
+                                <manifest>
+                                    <mainClass>com.javaetmoi.jetty.JettyServer</mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                                <phase>package</phase> <!-- bind to the packaging phase -->
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                </plugins>
             </build>
 
         </profile>
