--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.javaetmoi.jetty</groupId>
     <artifactId>jetty-webapp</artifactId>
-    <name>JavaEtMoi Core :: ${project.artifactId} - ${project.packaging}</name>
+    <name>JavaEtMoi Demo :: ${project.artifactId} - ${project.packaging}</name>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>WAR-less Java web application with Jetty</description>
