--- a/pom.xml
+++ b/pom.xml
@@ -325,7 +325,6 @@
             <build>
                 <plugins>
                     <!-- Generate both Windows and Linux bash shell execution scripts -->
-                    <!-- Java 7 should be on path -->
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>appassembler-maven-plugin</artifactId>
@@ -348,10 +347,8 @@
                             <!-- Include the target configuration directory in the beginning of
                                  the classpath declaration in the bin scripts -->
                             <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
-
                             <!-- Extra JVM arguments that will be included in the bin scripts -->
                             <extraJvmArguments>-Xmx1024m</extraJvmArguments>
-
                             <programs>
                                 <program>
                                     <id>start</id>
@@ -392,8 +389,8 @@
                         </configuration>
                         <executions>
                             <execution>
-                                <id>make-assembly</id> <!-- this is used for inheritance merges -->
-                                <phase>package</phase> <!-- bind to the packaging phase -->
+                                <id>make-assembly</id>
+                                <phase>package</phase>
                                 <goals>
                                     <goal>single</goal>
                                 </goals>
@@ -403,8 +400,8 @@
 
                 </plugins>
             </build>
-
         </profile>
+        
     </profiles>
 
 
